# data-collect

./: .gitignore  pyproject.toml
ResidentEvil/: collect.ipynb  collect.py
