[tool.poetry]
name = "data-collect"
version = "0.1.0"
description = "data collect project with web scrapping"
authors = ["Francisco Procópio <francisco.procopio@enacom.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.5"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
